--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "illuminate/queue": "^11.0|^12.0",
     "illuminate/routing": "^11.0|^12.0",
     "illuminate/support": "^11.0|^12.0",
+    "livewire/livewire": "^3.6.4",
     "nesbot/carbon": "^2.0|^3.0"
   },
   "require-dev": {
