--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
   ],
   "require": {
     "php": "^8.2",
+    "doctrine/dbal": "^4.0",
     "illuminate/cache": "^11.0|^12.0",
     "illuminate/console": "^11.0|^12.0",
     "illuminate/contracts": "^11.0|^12.0",
