--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,35 @@
-# Ignore all test and documentation with "export-ignore".
+# Auto detect text files and perform LF normalization
+* text=auto
 
-/.gitlab export-ignore
-/.gitignore         export-ignore
-/tests              export-ignore
-/.idea export-ignore
-/src/**/Tests       export-ignore
-/src/**/*Test.php   export-ignore
-/src/**/Test.php    export-ignore
-/phpunit.xml   export-ignore
-/.gitlab-ci.yml export-ignore
-/docs export-ignore
+# Ignore files and directories for production releases
+# These will be excluded when installing via Composer with --prefer-dist
+
+# Git and CI/CD
+/.git                   export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/.gitlab                export-ignore
+/.gitlab-ci.yml         export-ignore
+/.coderabbit.yaml       export-ignore
+
+# IDE and editor files
+/.idea                  export-ignore
+/.vscode                export-ignore
+/.editorconfig          export-ignore
+/.DS_Store              export-ignore
+
+# Testing
+/tests                  export-ignore
+/phpunit.xml            export-ignore
+/phpcs.xml              export-ignore
+/.php-cs-fixer.dist.php export-ignore
+/.php-cs-fixer.cache    export-ignore
+
+# Documentation (wiki is separate)
+/docs                   export-ignore
+/CONTRIBUTING.md        export-ignore
+/CHANGELOG.md           export-ignore
+
+# Development files
+*.md                    export-ignore
+!README.md              -export-ignore
