--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     "illuminate/queue": "^11.0|^12.0",
     "illuminate/routing": "^11.0|^12.0",
     "illuminate/support": "^11.0|^12.0",
-    "livewire/livewire": "^3.6.4",
+    "livewire/livewire": "^3.6.4|^4.0",
     "nesbot/carbon": "^2.0|^3.0"
   },
   "require-dev": {
